<resources>
    <string name="app_name">CourtCounter</string>

    <string name="hello_world">Team A</string>
    <string name="teamB">Team B</string>
    <string name="action_settings">Settings</string>
    <string name="threePoints">+3 POINTS</string>
    <string name="twoPoints">+2 POINTS</string>
    <string name="freeThrow">FREE THROW</string>
    <string name="numberOfPoints">0</string>
</resources>
