<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/hello_world"
                android:paddingTop="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/numberOfPoints"
                android:textSize="65dp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="threePointerA"
                android:text="@string/threePoints"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="twoPointerA"
                android:text="@string/twoPoints"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="freeThrowA"
                android:text="@string/freeThrow"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                />
        </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">


    </View>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/teamB"
                android:fontFamily="sans-serif-light"
                android:textColor="#616161"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/numberOfPoints"
                android:textSize="65dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="threePointerB"
                android:text="@string/threePoints"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="twoPointerB"
                android:text="@string/twoPoints"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="freeThrowB"
                android:text="@string/freeThrow"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="Reset"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
